# askama-tera-hot-reload

./: Cargo.toml  README.md
src/: main.rs
styles/: index.css
templates/: hello.html
